--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+spring.datasource.url=jdbc:h2:mem:offersdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=kognitive
+spring.datasource.password=kognitive123
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.data=classpath:local-data.sql
+management.endpoints.web.base-path=/
+images.base.url=https://jsonplaceholder.typicode.com/photos
+#spring.security.user.name=kognitive
+#spring.security.user.password=kognitive
+server.port=8080
